--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ chardet==3.0.4
 click==7.1.2
 dominate==2.5.2
 Flask==1.1.2
+
 Flask-Bootstrap==3.3.7.1
 Flask-CKEditor==0.4.4.1
 Flask-Gravatar==0.5.0
@@ -20,3 +21,4 @@ visitor==0.1.3
 Werkzeug==1.0.1
 WTForms==2.3.3
 gunicorn==20.1.0
+psycopg2-binary==2.9.4
